# tauri-launcher

./: package.json
src/: App.tsx  index.html  main.js  style.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/authentification/: mod.rs
src-tauri/src/launcher/: manifest.rs  mod.rs
src-tauri/src/launcher/altarik/: custom_version_manifest.rs  mod.rs
src/components/: AltarikManifestComponent.tsx  ChapterItem.tsx  ChapterList.tsx  LoginPage.tsx  login.js
src/models/manifest/: AltarikManifest.tsx
src/scripts/: ms_connect.js
